--- a/index.html
+++ b/index.html
@@ -52,6 +52,23 @@
 
                     <div class="project-card">
                         <div class="project-header">
+                            <h3 class="project-title">Photographic Nechanical Failure Assessment</h3>
+                            <div class="project-tags">
+                                <span class="tag">ML</span>
+                                <span class="tag">CV</span>
+                                <span class="tag">Data Engineering</span>
+                                <span class=""tag">Predictive Maintenance</span>
+                            </div>
+                        </div>
+                        <p class="project-description">
+                            Reviews photos and emails from field maintenance personnel to automatically classify mechanical failures, 
+                            feeding a database of fleet management predictive maintenance data and conducting real-time assessment of failure patterns.
+                        </p>
+                        <a href="#" class="project-link">View Project →</a>
+                    </div>
+
+                    <div class="project-card">
+                        <div class="project-header">
                             <h3 class="project-title">Computer Vision Trailer Light Controller</h3>
                             <div class="project-tags">
                                 <span class="tag">ML</span>
@@ -92,35 +109,34 @@
                 <h2 class="section-title">Technical Stack</h2>
                 <div class="skills-grid">
                     <div class="skill-category">
-                        <h3 class="skill-category-title">Machine Learning</h3>
+                        <h3 class="skill-category-title">Computer Vision & ML</h3>
                         <ul class="skill-list">
-                            <li>PyTorch / TensorFlow</li>
-                            <li>Computer Vision</li>
-                            <li>Time-Series Analysis</li>
-                            <li>MLOps & Deployment</li>
+                            <li>Supervised & Unsupervised Learning</li>
+                            <li>Object Detection & Classification</li>
+                            <li>Pose Estimation</li>
+                            <li>Real-time Video Processing</li>
                         </ul>
                     </div>
                     <div class="skill-category">
-                        <h3 class="skill-category-title">Robotics & Systems</h3>
+                        <h3 class="skill-category-title">Deployment & Edge AI</h3>
                         <ul class="skill-list">
-                            <li>ROS2</li>
-                            <li>CARLA / AutoSAR</li>
-                            <li>Sensor Fusion</li>
-                            <li>Embedded Systems</li>
+                            <li>Embedded Vision Systems</li>
+                            <li>Model Optimization for Edge</li>
+                            <li>Real-time Inference</li>
+                            <li>Hardware Integration</li>
                         </ul>
                     </div>
                     <div class="skill-category">
-                        <h3 class="skill-category-title">Engineering</h3>
+                        <h3 class="skill-category-title">Data & Systems</h3>
                         <ul class="skill-list">
-                            <li>Python / C++</li>
-                            <li>CAD / Fusion 360</li>
-                            <li>Rapid Prototyping</li>
-                            <li>Systems Integration</li>
+                            <li>Fleet Data Pipelines</li>
+                            <li>Predictive Maintenance</li>
+                            <li>Failure Pattern Analysis</li>
+                            <li>Python / C++ / CAD</li>
                         </ul>
                     </div>
                 </div>
             </div>
-        </section>
 
         <!-- ABOUT PAGE -->
         <section id="about" class="page">
@@ -130,19 +146,19 @@
                 <div class="about-content">
                     <div class="about-text">
                         <p class="lead-text">
-                            I work on ML systems for autonomous vehicles and robotics. The problems are real—safety, 
-                            reliability, and making technology that actually helps people—and I'm trying to solve them 
+                            I work on ML systems for vehicles and fleets. The problems are real—safety, 
+                            reliability, and making technology that actually helps people. I'm trying to solve them 
                             with the right combination of machine learning and engineering fundamentals.
                         </p>
                         
                         <p>
-                            I'm excited about ML because it's a tool for solving problems that matter. Autonomous vehicles 
-                            that don't crash. Predictive maintenance that prevents failures before they happen. Systems that 
+                            I'm excited about ML because it's a tool for solving problems that matter. Vehicles 
+                            that don't crash. Spatially intelligent models that find problems at scale. Systems that 
                             make transportation safer and more accessible. These are solvable problems, and ML is part of 
                             the solution.
                         </p>
 
-                        <h2 class="subsection-title">What I've Done</h2>
+                        <h2 class="subsection-title">Background</h2>
                         
                         <div class="timeline">
                             <div class="timeline-item">
