--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         </div>
                         <p class="project-description">
                             Reviews photos and emails from field maintenance personnel to automatically classify mechanical failures, 
-                            feeding a database of fleet management predictive maintenance data and conducting real-time assessment of failure patterns.
+                            feeding a potential database of fleet management predictive maintenance data and conducting real-time assessment of failure patterns.
                         </p>
                         <a href="#" class="project-link">View Project →</a>
                     </div>
@@ -81,7 +81,7 @@
                             Eliminates electrical issues and fires caused by wiring installation on tow vehicles.
                             Implements unsupervised clustering for reliable performance in diverse scenarios.
                         </p>
-                        <a href="#" class="project-link">View Project →</a>
+                        <a href="https://github.com/4AM365/Computer-Vision-Trailer-Light-Controller" class="project-link">View Project →</a>
                     </div>
 
                     <div class="project-card">
@@ -98,7 +98,7 @@
                             Uses pose estimation and classifies objects according to mechanical behavior to prevent accidents.
                             Feasible for implementation on tow vehicle backup cameras.
                         </p>
-                        <a href="#" class="project-link">View Project →</a>
+                        <a href="https://github.com/4AM365/Mechanical-Fastening-Detection-from-Images" class="project-link">View Project →</a>
                     </div>
 
 
