--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </h1>
                 <p class="hero-subtitle">Machine Learning Engineer</p>
                 <p class="hero-description">
-                    Building ML systems for autonomous vehicles and robotics. Focused on solving real problems that matter.
+                    Building ML systems for mechanical understanding and vehicle safety. Inspired by my career in accident reconstruction.
                 </p>
                 <div class="hero-links">
                     <a href="https://github.com/yourusername" target="_blank" class="hero-link">GitHub</a>
