--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a href="https://github.com/yourusername" target="_blank" class="hero-link">GitHub</a>
                     <a href="https://linkedin.com/in/yourusername" target="_blank" class="hero-link">LinkedIn</a>
                 </div>
-            </div>>
+            </div>
 
                     <div class="project-card">
                         <div class="project-header">
@@ -57,7 +57,7 @@
                                 <span class="tag">ML</span>
                                 <span class="tag">CV</span>
                                 <span class="tag">Data Engineering</span>
-                                <span class=""tag">Predictive Maintenance</span>
+                                <span class="tag">Predictive Maintenance</span>
                             </div>
                         </div>
                         <p class="project-description">
