--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>William Craig - ML Engineer</title>
+    <title>William Craig</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=IBM+Plex+Sans:wght@400;500;600&display=swap" rel="stylesheet">
@@ -40,7 +40,7 @@
                 <h1 class="hero-title">
                     <span class="glitch" data-text="William Craig">William Craig</span>
                 </h1>
-                <p class="hero-subtitle">Machine Learning Engineer</p>
+                <p class="hero-subtitle">ML + Automotive Safety</p>
                 <p class="hero-description">
                     Building ML systems for mechanical understanding and vehicle safety. Inspired by my career in accident reconstruction.
                 </p>
