--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </li>
             </ul>
             <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
-                <span class="theme-icon">◐</span>
+                <span class="theme-icon">◐  m </span>
             </button>
         </div>
     </nav>
@@ -148,16 +148,23 @@
                 <div class="about-content">
                     <div class="about-text">
                         <p class="lead-text">
-                            I work on ML systems for vehicles and fleets. The problems are real—safety, 
-                            reliability, and making technology that actually helps people. I'm trying to solve them 
-                            with the right combination of machine learning and engineering fundamentals.
+                            I build ML systems for autonomous vehicles and safety-critical applications. My work spans 
+                            computer vision for real-time perception, unsupervised learning for robust deployment, and 
+                            developing safety validation frameworks for AI systems.
                         </p>
                         
                         <p>
-                            I'm excited about ML because it's a tool for solving problems that matter. Vehicles 
-                            that don't crash. Spatially intelligent models that find problems at scale. Systems that 
-                            make transportation safer and more accessible. These are solvable problems, and ML is part of 
-                            the solution.
+                            What makes my approach different: I spent 6+ years investigating life-altering accidents. 
+                            I've analyzed 300+ vehicle accidents, designed electronics that shipped to production, 
+                            and served as a technical witness explaining product lifecycles to courts and stakeholders. That background 
+                            means when I build ML systems, I'm already thinking about edge cases, failure modes, and safety validation—not 
+                            as an afterthought, but as part of the design.
+                        </p>
+
+                        <p>
+                            I've led teams (Formula SAE captain), gained multi-stakeholder consensus on critical safety issues, 
+                            and served on technical standards committees (NATM). I understand both the engineering and the 
+                            organizational challenges of deploying AI safely.
                         </p>
 
                         <h2 class="subsection-title">Background</h2>
@@ -168,7 +175,7 @@
                                 <div class="timeline-content">
                                     <h3>Formula SAE & Early Engineering</h3>
                                     <p>Captained a team building a race car from scratch. Learned systems 
-                                    integration, team coordination, and how to make things work when they really need to.</p>
+                                    integration, team coordination, and how to make things work when they really need to. Interned @ Ford working on electronics architecture.</p>
                                 </div>
                             </div>
                             
@@ -193,8 +200,8 @@
 
                         <h2 class="subsection-title">Education & Credentials</h2>
                         <ul class="credentials-list">
-                            <li><strong>M.S. Engineering</strong> - Arizona State University (GPA: 3.76)</li>
-                            <li><strong>B.S. Engineering (Electrical Systems)</strong> - Arizona State University</li>
+                            <li><strong>M.S. Engineering</strong> - Arizona State University Polytechnic</li>
+                            <li><strong>B.S. Engineering (Electrical Systems)</strong> - Arizona State University Polytechnic</li>
                             <li><strong>Professional Engineer (PE)</strong> - Mechanical: Machine Design & Materials</li>
                             <li><strong>ASE Certified Master Light Automotive Technician</strong></li>
                             <li><strong>Certified Fire and Explosion Investigator (CFEI)</strong></li>
@@ -334,7 +341,7 @@
 
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; 2025 William Craig. Built with focus.</p>
+            <p>&copy; 2025 William Craig</p>
             <div class="footer-links">
                 <a href="https://github.com/4AM365" target="_blank">GitHub</a>
                 <a href="https://linkedin.com/in/wtcraig" target="_blank">LinkedIn</a>
