light_by_default

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=IBM+Plex+Sans:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body data-theme="dark">
+<body data-theme="Light">
     <nav class="navbar">
         <div class="nav-container">
             <a href="#home" class="nav-logo">W</a>
