--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </h1>
                 <p class="hero-subtitle">ML Engineer | Safety Systems</p>
                 <p class="hero-description">
-                    Building ML systems for safety-critical applications. 6+ years in vehicle safety and accident reconstruction, now applying ML to prevent the failures I used to investigate.
+                    Building ML systems for safety-critical applications. 6+ years in vehicle safety and accident reconstruction, now applying ML inspired by the accidents I used to investigate.
                 </p>
                 <div class="hero-links">
                     <a href="https://github.com/4AM365" target="_blank" class="hero-link">GitHub</a>
