--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                     <div class="project-card">
                         <div class="project-header">
-                            <h3 class="project-title">Coupling Failure Prevention System</h3>
+                            <h3 class="project-title">Mechanical Fastening Detection from Images</h3>
                             <div class="project-tags">
                                 <span class="tag">Safety Validation</span>
                                 <span class="tag">CV</span>
@@ -99,7 +99,7 @@
                         <p class="project-description">
                             Validates trailer coupling integrity using pose estimation to detect latch state and prevent 
                             separation accidents. Designed for deployment on existing backup camera systems—providing 
-                            automated safety verification of human mechanical connections.
+                            automated safety verification of human mechanical connections. Potential applications to any system where visual safety checks are performed or things are assembled.
                         </p>
                         <a href="https://github.com/4AM365/Mechanical-Fastening-Detection-from-Images" class="project-link">View Project →</a>
                     </div>
